--- a/Wigo/en.lproj/Main.storyboard
+++ b/Wigo/en.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="r0s-iy-1wR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="r0s-iy-1wR">
     <dependencies>
-        <deployment defaultVersion="1792" identifier="iOS"/>
+        <deployment defaultVersion="1280" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
@@ -97,11 +97,11 @@
             </objects>
             <point key="canvasLocation" x="1064" y="-2699"/>
         </scene>
-        <!--Navigation Controller - People-->
+        <!--Navigation Controller - Who-->
         <scene sceneID="5Z6-ag-ZQ1">
             <objects>
                 <navigationController id="5D7-fp-3iF" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="People" image="peopleIcon.png" id="t73-in-thS"/>
+                    <tabBarItem key="tabBarItem" title="Who" image="peopleIcon.png" id="t73-in-thS"/>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="xeU-9s-RSo"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="vZe-S4-iQp">
@@ -238,11 +238,11 @@
             </objects>
             <point key="canvasLocation" x="1020" y="-1944"/>
         </scene>
-        <!--Navigation Controller - Places-->
+        <!--Navigation Controller - Where-->
         <scene sceneID="CUn-1Q-ll3">
             <objects>
                 <navigationController definesPresentationContext="YES" id="gcK-hO-ozh" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Places" image="placesIcon.png" id="Ewa-dt-Zfe"/>
+                    <tabBarItem key="tabBarItem" title="Where" image="placesIcon.png" id="Ewa-dt-Zfe"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="7Is-XA-40F">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
