--- a/Wigo/en.lproj/Main.storyboard
+++ b/Wigo/en.lproj/Main.storyboard
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="r0s-iy-1wR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6205" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="r0s-iy-1wR">
     <dependencies>
-        <deployment defaultVersion="1792" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6198"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller - Chats-->
+        <!--Chats-->
         <scene sceneID="owI-yM-UlA">
             <objects>
                 <navigationController definesPresentationContext="YES" id="gjq-FW-yKe" sceneMemberID="viewController">
@@ -21,7 +20,7 @@
             </objects>
             <point key="canvasLocation" x="585" y="-1176"/>
         </scene>
-        <!--Navigation Controller - Notifications-->
+        <!--Notifications-->
         <scene sceneID="bjY-mo-xrt">
             <objects>
                 <navigationController definesPresentationContext="YES" id="Vs2-nt-5Un" sceneMemberID="viewController">
@@ -37,7 +36,7 @@
             </objects>
             <point key="canvasLocation" x="578" y="-431"/>
         </scene>
-        <!--Notifications View Controller - Notifications-->
+        <!--Notifications-->
         <scene sceneID="h7d-KN-F87">
             <objects>
                 <viewController id="pty-5U-I3A" customClass="NotificationsViewController" sceneMemberID="viewController">
@@ -57,7 +56,7 @@
             </objects>
             <point key="canvasLocation" x="1036" y="-431"/>
         </scene>
-        <!--Chat View Controller - Chats-->
+        <!--Chats-->
         <scene sceneID="vTy-9t-Fy4">
             <objects>
                 <viewController id="7gV-bv-Wd8" customClass="ChatViewController" sceneMemberID="viewController">
@@ -77,7 +76,7 @@
             </objects>
             <point key="canvasLocation" x="1020" y="-1176"/>
         </scene>
-        <!--Main View Controller - Main View Controller-->
+        <!--Main View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController title="Main View Controller" id="2" customClass="MainViewController" sceneMemberID="viewController">
@@ -97,7 +96,7 @@
             </objects>
             <point key="canvasLocation" x="1064" y="-2699"/>
         </scene>
-        <!--Navigation Controller - Who-->
+        <!--Who-->
         <scene sceneID="5Z6-ag-ZQ1">
             <objects>
                 <navigationController id="5D7-fp-3iF" sceneMemberID="viewController">
@@ -159,7 +158,7 @@
             </objects>
             <point key="canvasLocation" x="1020" y="-1944"/>
         </scene>
-        <!--Navigation Controller - Where-->
+        <!--Where-->
         <scene sceneID="CUn-1Q-ll3">
             <objects>
                 <navigationController definesPresentationContext="YES" id="gcK-hO-ozh" sceneMemberID="viewController">
@@ -182,10 +181,13 @@
         <image name="peopleIcon.png" width="19" height="21"/>
         <image name="placesIcon.png" width="15" height="21"/>
     </resources>
-    <color key="tintColor" red="0.95686280729999995" green="0.58431375029999999" blue="0.1764705926" alpha="1" colorSpace="deviceRGB"/>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination"/>
+        <simulatedScreenMetrics key="destination">
+            <size key="portraitSize" width="320" height="480"/>
+            <size key="landscapeSize" width="480" height="320"/>
+        </simulatedScreenMetrics>
     </simulatedMetricsContainer>
+    <color key="tintColor" red="0.95686280729999995" green="0.58431375029999999" blue="0.1764705926" alpha="1" colorSpace="deviceRGB"/>
 </document>
