--- a/Wigo/en.lproj/Main.storyboard
+++ b/Wigo/en.lproj/Main.storyboard
@@ -57,6 +57,79 @@
             </objects>
             <point key="canvasLocation" x="1942.5" y="-538.75"/>
         </scene>
+        <!--Event Story View Controller-->
+        <scene sceneID="hcX-WI-tiY">
+            <objects>
+                <viewController storyboardIdentifier="EventStoryViewController" id="4Mq-GY-deg" customClass="EventStoryViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="WxS-6d-lSH"/>
+                        <viewControllerLayoutGuide type="bottom" id="hVr-DY-gcc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="mcF-Zh-1Nm">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PLo-em-MI4">
+                                <rect key="frame" x="256" y="285" width="89" height="30"/>
+                                <state key="normal" title="Open Details">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="showEventConversation:" destination="4Mq-GY-deg" eventType="touchUpInside" id="1dC-hs-vEU"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="PLo-em-MI4" firstAttribute="centerY" secondItem="mcF-Zh-1Nm" secondAttribute="centerY" id="ahH-wp-Kdz"/>
+                            <constraint firstItem="PLo-em-MI4" firstAttribute="centerX" secondItem="mcF-Zh-1Nm" secondAttribute="centerX" id="xiP-2R-cn3"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fMV-dI-toP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2043" y="324"/>
+        </scene>
+        <!--Event Conversation View Controller-->
+        <scene sceneID="b7X-7F-PJX">
+            <objects>
+                <viewController storyboardIdentifier="EventConversationViewController" id="o6R-ae-Mya" customClass="EventConversationViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7Cf-vr-05A"/>
+                        <viewControllerLayoutGuide type="bottom" id="uTD-cu-W3i"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="VbK-jd-SdY">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="CqT-lH-jAT">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="164"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="gSm-hY-BN6">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="bOA-54-8NK">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vq3-Zb-sqH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2759" y="332"/>
+        </scene>
         <!--Chats-->
         <scene sceneID="vTy-9t-Fy4">
             <objects>
