--- a/Wigo/en.lproj/Main.storyboard
+++ b/Wigo/en.lproj/Main.storyboard
@@ -120,9 +120,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="CqT-lH-jAT">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="CqT-lH-jAT">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="164"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1bh-ez-dlK">
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="FxC-1A-5NR">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -133,10 +133,11 @@
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="156" height="134"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
+                                        <size key="customSize" width="156" height="134"/>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
@@ -146,6 +147,12 @@
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="uTD-cu-W3i" firstAttribute="top" secondItem="CqT-lH-jAT" secondAttribute="bottom" constant="436" id="6NJ-Iy-g2F"/>
+                            <constraint firstAttribute="trailing" secondItem="CqT-lH-jAT" secondAttribute="trailing" id="Rf3-FT-jmj"/>
+                            <constraint firstItem="CqT-lH-jAT" firstAttribute="leading" secondItem="VbK-jd-SdY" secondAttribute="leading" id="cqQ-Wj-XZq"/>
+                            <constraint firstItem="CqT-lH-jAT" firstAttribute="top" secondItem="VbK-jd-SdY" secondAttribute="top" id="yeg-ze-Wy7"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vq3-Zb-sqH" userLabel="First Responder" sceneMemberID="firstResponder"/>
